@@ -1,3 +1,4 @@
+0.5.0-0 @11/19/2004 04:50:00 UTC@
 0.4.1-0 @11/18/2004 03:10:00 UTC@
 0.4.0-0 @12/1/2003 22:00:00 UTC@
 0.3.0-0 @12/1/2003 21:30:00 UTC@
